# onvif-rtsp

./: CMakeLists.txt  README.md  xcamera.pro
inc/: dataassist.h  list.h  shareMem.h  xcam_log.h  xcam_onvif.h  xcam_rtsp.h  xcam_stream.h  xcam_thread.h
onvif/inc/: config.h  onvif.h
onvif/src/: func_network.c  func_network.h  onvif.c  onvif_func.c
onvif/src_soap/: onvif.h  soapClient.c  soapClientLib.c  soapServer.c  soapServerLib.c  soapStub.h  stdsoap2.c  wsdd.nsmap
rtsp/: H264VideoServerMediaSubsession.cpp  H264VideoServerMediaSubsession.hh  H264VideoStreamSource.cpp  H264VideoStreamSource.hh  LiveRTSP.cpp  LiveRTSP.hh  Makefile  c_liveRTSP.h  test1_RTSP.c  video_source.c  video_source.h
rtsp/live555-20181214/: Makefile  config.linux-64bit  config.mips-linux-gnu-uclibc  make.sh
rtsp/live555-20181214/BasicUsageEnvironment/: Makefile
rtsp/live555-20181214/UsageEnvironment/: Makefile
rtsp/live555-20181214/groupsock/: Makefile
rtsp/live555-20181214/liveMedia/: #MatroskaFileParser.cpp#  H264or5VideoRTPSink.cpp  Makefile
rtsp/live555-20181214/mediaServer/: Makefile  live555MediaServer
rtsp/live555-20181214/proxyServer/: Makefile  live555ProxyServer
rtsp/live555-20181214/testProgs/: MPEG2TransportStreamIndexer  Makefile  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testOnDemandRTSPServer  testOnDemandRTSPServer.cpp  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
src/: list.c  shareMem.c  xcam_log.c  xcam_main.c  xcam_onvif.c  xcam_rtsp.c  xcam_stream.c  xcam_thread.c
